# green_gain

./: .gitignore  AGENTS.md  F3_DEPLOYMENT_INSTRUCTIONS.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  test_feature_f3.py
apps/api/: Makefile  check_data_fix.py  pyproject.toml  test_fixes.py  test_simple.py  validate_fixes.py  verify_data_fix.py
apps/api/app/: main.py
apps/api/app/data/: __init__.py  sample_data.py
apps/api/app/data/artifacts/: aliases.jsonl  gazetteer.json
apps/api/app/routes/: admin.py  chat.py
apps/api/app/schemas/: entity_recognition.py
apps/api/app/services/: aho_corasick_matcher.py  artifact_loader.py  cache_manager.py  entity_recognizer.py  fuzzy_matcher.py  scheduler.py  static_responses.py
apps/api/app/utils/: __init__.py  keyword_matcher.py
apps/api/tests/: test_artifact_loader.py  test_cache_integration.py  test_cache_manager.py  test_chat.py  test_entity_recognition.py  test_fuzzy_matching.py  test_static_responses.py
apps/api/tests/performance/: locustfile.py  test_entity_recognition_load.py
apps/web/: .env.example  .eslintrc.json  Makefile  jest.setup.js  package.json  tailwind.config.js
apps/web/src/components/chat/: ChatInterface.tsx  EnhancedMessageInput.tsx  EntityPill.module.css  EntityPill.tsx  HighlightedText.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
apps/web/src/hooks/: useChat.ts  useEntityRecognition.ts
apps/web/src/pages/: index.tsx
apps/web/src/services/: entityApi.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: api.ts  chat.ts  entities.ts
apps/web/src/utils/: api.ts  debounce.ts
devtools/: .env.example  README.md  generate_entity_artifacts.py  requirements.txt  run_tests.py  test_generate_entity_artifacts.py
(+7 files in other folders)
